# feclib

./: CMakeLists.txt  README.md  fec.cpp  fec.h  fectest.cpp
